# juliet

./: .gitignore  pyproject.toml
src/juliet/: __init__.py  fit.py  gaussian_process.py  load.py  model.py  utils.py
tests/: test_eclipse.py  test_eclipse_ltd.py  test_transit_and_eclipse.py  test_transit_and_eclipse_and_phasecurve.py  test_transit_and_eclipse_lttd.py  test_transit_star.py  test_utils.py
